Added vim keybindings

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,22 @@
 setw -g mode-keys vi
 set -g status-keys vi
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-selection-and-cancel
-bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xclip -i -selection clipboard"
+
+unbind C-b
+set -g prefix C-Space
+bind C-Space send-prefix
+# Split vertically (top/bottom) with 'Esc' followed by ']'
+
+bind ] split-window -v "#{pane_current_path}"
+
+unbind '"'
+# Split horizontally (left/right) with 'Esc' followed by 'Ctrl->'
+bind > split-window -h "#{pane_current_path}"
+unbind %
+
+# Navigation between panes
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
 
