--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,7 +6,7 @@ set -g prefix C-Space
 bind C-Space send-prefix
 # Split vertically (top/bottom) with 'Esc' followed by ']'
 
-bind ] split-window -v "#{pane_current_path}"
+bind - split-window -v "#{pane_current_path}"
 
 unbind '"'
 # Split horizontally (left/right) with 'Esc' followed by 'Ctrl->'
