--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,22 +1,23 @@
-setw -g mode-keys vi
-set -g status-keys vi
+#setw -g mode-keys vi
+#set -g status-keys vi
 
 unbind C-b
 set -g prefix C-Space
 bind C-Space send-prefix
 # Split vertically (top/bottom) with 'Esc' followed by ']'
 
-bind - split-window -v "#{pane_current_path}"
+bind C-> split-window -h "#{pane_current_path}"
+#bind C-% split-window -v "#{pane_current_path}"
 
-unbind '"'
 # Split horizontally (left/right) with 'Esc' followed by 'Ctrl->'
-bind > split-window -h "#{pane_current_path}"
-unbind %
+#bind > split-window -h "#{pane_current_path}"
+#unbind %
 
 # Navigation between panes
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+bind x kill-pane
 
 
