--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,19 @@
-#setw -g mode-keys vi
-#set -g status-keys vi
+# Use vim keybindings in copy mode
+setw -g mode-keys vi
+
+# Setup 'v' to begin selection as in Vim
+bind-key -T copy-mode-vi v send -X begin-selection
+bind-key -T copy-mode-vi y send -X copy-selection-and-cancel
+
+# To copy to the Linux clipboard with xclip
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+
+# Update default binding of `Enter` to also use copy-selection-and-cancel
+unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi Enter send -X copy-selection-and-cancel
+
+# Bind ']' to paste buffer
+bind ] paste-buffer
 
 unbind C-b
 set -g prefix C-Space
